# Pake

./: .gitignore  README.md
.github/workflows/: release.yml
src-tauri-native/: Cargo.toml
src-tauri-native/.pake/: native_config.json
src-tauri-native/extension/: nav.css  nav.js
src-tauri-native/src/: browser_detect.rs  browser_launch.rs  config.rs  desktop_entry.rs  extension.rs  main.rs
src-tauri/src/: lib.rs  util.rs
