[package]
name = "pake-native"
version = "3.8.4"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
which = "7"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "z"
strip = true
